[package]
name = "GameEffectTool"
version = "2.0.0"
edition = "2021"
authors = ["Colzry <colzry@outlook.com>"]

[dependencies]
zip = "0.6"
flate2 = "1.0"
unrar = "0.4"
sevenz-rust = "0.4"
winapi = { version = "0.3", features = ["fileapi"] }
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }